# generalized-hybrid-grains

./: .gitignore  README.md  environment.yaml  environment.yml  requirements.txt  setup.sh
assets/homogenization/: homogenize_stress.xml
assets/inialization/: DEM_test.xml  DEM_test_resume.xml  herschel_bulkley.xml  initialpoints.hdr  obstacles.hdr  resumefile.h5  square_merge_template.h5
docs/: handover_document.md  py39.yaml  requirements.txt
docs/syuron_hara/: syuron_modify.tex
src/cpp/MPM2D/: CMakeLists.txt  CompileDefinitions.h
src/cpp/MPM2D/cmake/: FindRapidXML.cmake
src/cpp/RigidBody2D/: CMakeLists.txt  CMakeSourceFiles.txt  CompileDefinitions.h  DiscreteElement2D.h  ForceData2D.h  HDF5io.h  RigidBody2DData.cpp  RigidBody2DData.h  collisiondetection2d.cpp  collisiondetection2d.h  main.cpp  settings.h  simulator.cpp  simulator.h  uniformgrid2d.cpp  uniformgrid2d.h  xmlparser.cpp  xmlparser.h
src/python/Visualize/nagasu/: allforceh5.py  allgrainh5.py  extractStressPlot.py  grainRender.py  grainh5.py  homogenizationh5.py  make_piled_video.bat  make_piled_video.bat.bak  progressh5.py  qt_gl_widget2.py  render_obj.bat  render_obj.bat.bak  render_obj.sh  stress_pair_compressor.py  stress_pair_compressor_nooutlier.py  stress_pair_compressor_outlier_beforep.py  stress_plot_widget.py
src/python/Visualize/tameru/: grainRender.py  make_piled_video.bat  render_obj.sh
src/python/analysis/: DEM_test_resume.xml  allforceh5.py  allgrainh5.py  allhomogenizationh5.py  allstepHomogenizer.py  allstepMPMBeforeflow.py  allstressplot.py  allstressviewer.py  compareForceAndGravity.py  extractStressPlot.py  extractStressPlot.py.bak  flowstress.bat  flowstress.sh  forceCalculatorMPM.py  herschel_bulkley.xml  homogenize_stress.xml  homogenizer.py  initResumefn.py  interpolateMPMStress.py  particlehomogenizationh5.py  progressh5.py  qt_gl_widget2.py  removeoutlier.py  rewriteResumefn.py  sample.csv  storeStressPair.py  stress_pair_compressor.py  stress_plot_widget.py  stress_plot_widget.py.bak  vertex_buffer_objects.py
src/python/analysis/debug/: debug_circle11.txt  debug_square11.txt
src/python/initialization/: boundarydesign.py  floorgenerator.py  forceh5.py  geninitialcolumn.py  grainrender.py  grainviewer.py  mergetool.py  removeobject.py  removetemplate.py
src/python/simulator/nagasu/: DEM_test_resume.xml  DEM_test_resume.xml.bak  HomogenizeDEMLoop.bat  HomogenizeDEMLoop.sh  HomogenizeForceSleep.bat  HomogenizeForceSleep_mac.sh  HomogenizeSimulationLoop.bat  HomogenizeSimulationLoop.sh  MPM2D  allforceh5.py  allhomogenizationh5.py  allstepHomogenizer.py  (+43 more)
test/: DEM_test_resume.xml  MPM2D  flowstress.sh  homogenize_stress.xml  rigidbody2dsim
test/DEMstress/: DEM.h5  DEM2.h5
test/MPMstress/: MPM.h5
test/Rolling/: element_data.h5  stress_pair_0.000400.h5
test/Save/: resumefile.h5
test/buildDEM/: CMakeCache.txt  Makefile  cmake_install.cmake  rigidbody2dsim
test/buildMPM/: CMakeCache.txt  MPM2D  Makefile  cmake_install.cmake
(+791 files in other folders)
